# xv6

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  answers-traps.txt
.cache/clangd/index/: alarmtest.c.AF1C8344432C4F9E.idx  bttest.c.D90F55B312012ECC.idx  call.c.8CE1DC84F3220037.idx  cat.c.72EE7DDC9F66B70D.idx  echo.c.4783E05CFB412A18.idx  fcntl.h.1AEBD5936188C985.idx  file.h.927736FF0F90F053.idx  forktest.c.7193647E1D02A9FB.idx  fs.h.1685D1F784C07DDF.idx  grep.c.F172CEFAC7D6257A.idx  grind.c.AC01091D1DB7C3AE.idx  init.c.68866532A62B3959.idx  kill.c.28ED75DDFD019E8E.idx  ln.c.E84E3506D7A018AF.idx  ls.c.1B70DE5AB6742842.idx  memlayout.h.141FF7EA23D0F688.idx  mkdir.c.9F2E1AAD431247E6.idx  param.h.DCDFEF4A0DFAD5B2.idx  printf.c.6839B3641B100A9C.idx  riscv.h.3B22889315010A56.idx  rm.c.2ABB0DDB19B2046E.idx  sh.c.53EAF6C99AEA920C.idx  sleeplock.h.74AB324748B0DC50.idx  spinlock.h.C1AF89277FE3BC0F.idx  stat.h.6F8DF10669033B3C.idx  stressfs.c.11ED81ADD13A4329.idx  syscall.h.7D4FCB23C2A43608.idx  types.h.69CCEAD9E5AC87DA.idx  ulib.c.82C05549A73778D3.idx  umalloc.c.9387603FA10F6D43.idx  user.h.6E3623347C823211.idx  usertests.c.7792CB7B5EAFE9BF.idx  wc.c.9C902F6FD75E90EE.idx  zombie.c.6E32594C9517BCC8.idx
kernel/: defs.h  exec.c  file.c  kalloc.c  param.h  printf.c  proc.c  proc.h  riscv.h  stat.h  syscall.c  sysfile.c  sysproc.c  trap.c  types.h  vm.c
mkfs/: mkfs
user/: alarmtest.bak  alarmtest.c  bttest.c  cowtest.c  find.c  ls.c  pgtbltest.c  pingpong.c  primes.c  sh.c  sleep.c  sysinfotest.c  trace.c  ulib.c  umalloc.c  user.h  usertests.c  xargs.c
